# c1-lettuce-classifier

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.interface-design/: system.md
backend/: db.py  main.py  models.py  schemas.py
backend/routers/: history.py  metrics.py  models.py  predict.py
docs/: cheatsheet.md  design-system.md  documentation.md
docs/diagrams/puml/: 01_use_cases.puml  02_er_diagram.puml  03_class_offline.puml  04_class_online.puml  05_architecture_pipeline.puml  06_architecture_models.puml  07_architecture_ensemble.puml  mockup_01_predict.puml  mockup_02_history.puml  mockup_03_metrics.puml  mockup_04_models.puml
docs/exports/: slides.pptx
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Card.tsx  ClassChip.tsx  CropTool.tsx  GrowthSpine.tsx  Layout.tsx  ModelPicker.tsx  ProbabilityBars.tsx  ViewfinderUpload.tsx  WebcamCapture.tsx
frontend/src/routes/: History.tsx  Metrics.tsx  Models.tsx  Predict.tsx
scripts/: build_slides.py
src/: config.py  cv.py  evaluate_all.py  inference.py  utils.py
src/data/: balance.py  ingest.py  preprocess.py  report.py  split.py
src/models/: _tf_lib.py  _torch_lib.py  efficientnet.py  ensemble.py  mobilenet.py  resnet.py  swin.py  vit.py
tests/: test_backend.py  test_balance.py  test_cv.py  test_inference.py  test_preprocess.py  test_split.py
