[project]
name = "c1-lettuce-classifier"
version = "0.1.0"
description = "Hydroponic lettuce growth-stage classifier (USCO AI course - C1)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "tensorflow==2.21.0",
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.50",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26,<2.3",
    "Pillow>=10.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyarrow>=17",
    "tabulate>=0.9",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:tensorflow.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
